Small bugfixes and hide scroll on firefox

--- a/css/about.css
+++ b/css/about.css
@@ -40,9 +40,9 @@
   font-family: Georgia, 'Trebuchet MS', 'Lucida Grande', 'Lucida Sans',serif
 }
 
-p{
-  /* text-indent: 1.5em; */
-}
+/* p{
+  text-indent: 1.5em;
+} */
 
 .section{
   border-top: 1px solid;
