--- a/css/gallery.css
+++ b/css/gallery.css
@@ -17,7 +17,7 @@
 }
 
 .image{
-  border: rgb(255, 255, 255, 0.75);
+  border: rgba(255, 255, 255, 0.75);
   border-style: solid;
   box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.5);
   border-width: 2px;
